<resources>
    <string name="app_name">OrganicHomeStays</string>
    <string name="todo">TODO</string>
    <string name="category">Category:</string>
    <string name="price">Price</string>
    <string name="Rs">\u20B9</string>
    <string name="pincode">Pincode</string>
    <string name="upload">Upload</string>
    <string name="address_of_homestay">Address of HomeStay</string>
    <string name="enter_homestay_name">Enter HomeStay Name</string>
    <string name="todoj">TODO</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="VC"> We at Organic Homestays firmly believe in presenting Hospitality of Sikkim without losing its
originality. Hence we came up with unique idea of connecting all the homestays in organic state of
Sikkim. This app is a reservation system where guests can simply login and book a room in
homestays around Sikkim.</string>
    <string name="contact">Organic Homestays
\nAugusty Kunj
\nHouse No: 249
\nAssam Daragaon
\nAssam Lingzey
\nEast Sikkim
\n737105\nContact: Mohan Sharma +91 97758 21394\n
Email: enquiries@organichomestays.com
ermohandhungyal@gmail.com</string>
</resources>